fin de l'animation d'entrée

--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -17,7 +17,8 @@ body {
 .character {
 	font-weight: 600;
     position: absolute;
-    font-size: 15px;
+    font-size: 16px;
     user-select: none;
     position: absolute;
+    transition: all 0.3s ease;
 }
