derniers ajustements de vitesses et de nombres de caractères et de timing

--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     overflow: hidden;
-    background-color: black;
+    background-color: rgb(21, 21, 21);
     color: green;
     font-family: 'Anonymous Pro', monospace;
 }
