--- a/styles/base.css
+++ b/styles/base.css
@@ -2,3 +2,32 @@
 	font-family: 'Montserrat';
 	src: url(../ui/fonts/Montserrat/Montserrat-Bold.ttf) format('truetype');
 }
+
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	margin: 0;
+	padding: 0;
+}
+
+main {
+	flex: 1;
+}
+
+footer {
+	font-size: 13px;
+	height: 20vh;
+	background-color: #333;
+	color: #fff;
+	display: grid;
+	grid-template-rows: 2fr 1fr;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+footer div {
+	display: grid;
+	grid-template-columns: 20px 1fr 20px 1fr 20px 1fr;
+}
