--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -73,7 +73,6 @@ main {
 main section {
     background-color: rgba(48, 48, 48, 0.6);
     border-radius: 15px;
-    padding: 25px;
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
@@ -100,6 +99,12 @@ main .projects {
     grid-row: 2;
 }
 
+main .projects a {
+    text-decoration: none;
+    color: #4CAF50;
+    font-weight: bold;
+}
+
 /* Titres des sections */
 main section h3 {
     color: #4CAF50;
@@ -122,6 +127,12 @@ main section {
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+main section a {
+    margin: 25px;
+    width: 100%;
+    height: 100%;
 }
 
 main section.visible {
