--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -79,19 +79,30 @@ main section {
 }
 
 main .aboutMe {
+    padding: 25px;
     grid-column: 1;
     grid-row: 1;
 }
 
 main .contact {
+    padding: 25px;
     grid-column: 2;
     grid-row: 1;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
+main .contact h3 {
+    margin-bottom: 10px;
+}
+
 main .skillXp {
     grid-column: 1;
     grid-row: 2;
+}
+main .skillXp a {
+    text-decoration: none;
+    color: #4CAF50;
+    font-weight: bold;
 }
 
 main .projects {
@@ -113,8 +124,7 @@ main section h3 {
     font-weight: normal;
 }
 
-/* Effet de hover sur les sections (sauf contact) */
-main .aboutMe:hover,
+/* Effet de hover sur les sections (sauf contact et about me) */
 main .skillXp:hover,
 main .projects:hover {
     transform: scale(1.05);
