--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,7 @@
+:root {
+    --text-color: #4adc4a;
+}
+
 @font-face {
 	font-family: 'Montserrat';
 	src: url(../ui/fonts/Montserrat/Montserrat-Bold.ttf) format('truetype');
@@ -68,7 +72,7 @@ footer > div {
     font-weight: bold;
     margin: 0;
     line-height: 1.2;
-    color: #4CAF50;
+    color: var(--text-color);
     text-transform: uppercase;
 }
 
@@ -165,7 +169,7 @@ footer > div {
 .contacts p:hover,
 .localisation a:hover,
 .a_propos a:hover {
-    color: #4CAF50;
+    color: var(--text-color);
 }
 
 .contacts a:hover img,
